[project]
name = "adjustor"
version = "4.0.0"
authors = [
  { name="Kapenekakis Antheas", email="pypi@antheas.dev" },
]
description = "Adjustor, a userspace program for managing the TDP of handheld devices."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/hhd-dev/adjustor"
"Bug Tracker" = "https://github.com/hhd-dev/adjustor/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["none"]  # package names should match these glob patterns (["*"] by default)
